 	- remove eventfd util;
 	- remove ask-password-api util;
 	- add quotes to warning message in log module;
 	- make SYSTEMD_UNIT_PATH more flexible;
 	- add clock_boottime_or_monotonic in time util;
 	- add utility function to append root to path;
 	- require exact matches in parse_boolean function;
 	- add and use USEC/NSEC_INFINIY;
 	- add safe_atou8 function;
 * virt:
 	- rework container detection logic;
 	- detect s390 virtualization;
 * tmpfiles:
 	- remove unused /run/systemd/ask-password directory;
 * po:
 	- add Ukrainian translation;
 * man:
 	- add link to Open Group Base Specifications;
 	- add missing archs to ConditionArchitecture= description;
 	- chroot jails are no longer detected by ConditionVirtualization=;
 	- remove machine-info page;
 	- mention XDG_DATA_HOME in systemd.unit;
 	- document yearly and annually in systemd.time(7);
 	- update systemd-analyze page;
 	- remove repeating words;
 	- fix path for system-sleep hook directory;
 * tests:
 	- remove test-ring test;
 	- add tests to test-tables;
 	- fix access to unit load path;
 	- pass on kernels without memory controller;
 	- fix masks in test-cgroup-mask test;
 	- add test-cgroup-mask test;
 	- add test units;
 	- add test which shows access to random memory to test-strv;
 * rules:
 	- consistently use "?*" instead of "*?";
 	- uaccess - add ID_SOFTWARE_RADIO;
 	- allow systemd to manage loop device partitions;
 * sysctl:
 	- enable promote_secondaries by default;
 * build:
 	- do not distribute generated emergency.service;
 	- add TEST_DIR path;
 	- add -Wno-typedef-redefinition;
 	- disable SMACK support by default;
 	- add missing files for distcheck;
 	- check for intltool also when polkit is enabled;
 	- remove kdbus-update build target;
 * bugfix:
 	- fix add comma when removed option is in the middle(fstab-generator);
 	- fix format string for usec_t type(generator);
 	- fix oneshot service resource control;
 	- use the default RestartSec for serial getty services;